Lisäsin analysoinnin kysymykseen Eroavatko poissaolomäärät eri koulujen välillä?

--- a/main.ipynb
+++ b/main.ipynb
@@ -223,7 +223,12 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": [
+    "1. Eroavatko poissaolomäärät eri koulujen välillä?\n",
+    "\n",
+    "- Koulujen välillä on selkeitä eroja poissaolomäärissä. Esimerkiksi Small High School\n",
+    "on huomattavasti vähemmän poissaoloja verrattuna muihin kouluihin, kuten East High School tai South High School, joissa poissaolot ovat paljon suurempia.\n"
+   ],
    "id": "7d5dada2c5fefd99"
   },
   {
@@ -234,7 +239,22 @@
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "# Group by school to get the average absences\n",
+    "school_performance = data.groupby('school_name').agg(\n",
+    "    avg_total_absences=('total_absences', 'mean')\n",
+    ").reset_index()\n",
+    "\n",
+    "# Plot the relationship between schools and average absences\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x='school_name', y='avg_total_absences', data=school_performance)\n",
+    "plt.title('Average Total Absences Across Schools')\n",
+    "plt.xlabel('School Name')\n",
+    "plt.ylabel('Average Total Absences')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ],
    "id": "66a27b2b27f828c4",
    "outputs": [],
    "execution_count": null
