--- a/main.ipynb
+++ b/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-30T06:38:41.942730Z",
-     "start_time": "2024-09-30T06:38:41.889128Z"
+     "end_time": "2024-09-30T06:41:30.297090Z",
+     "start_time": "2024-09-30T06:41:30.248705Z"
     }
    },
    "source": [
@@ -215,12 +215,12 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -236,8 +236,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T06:38:42.214384Z",
-     "start_time": "2024-09-30T06:38:41.970127Z"
+     "end_time": "2024-09-30T06:41:30.469543Z",
+     "start_time": "2024-09-30T06:41:30.323187Z"
     }
    },
    "cell_type": "code",
@@ -270,7 +270,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 26
+   "execution_count": 38
   },
   {
    "metadata": {},
@@ -288,8 +288,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T06:38:42.403793Z",
-     "start_time": "2024-09-30T06:38:42.244727Z"
+     "end_time": "2024-09-30T06:41:30.621918Z",
+     "start_time": "2024-09-30T06:41:30.494435Z"
     }
    },
    "cell_type": "code",
@@ -328,7 +328,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 27
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -343,8 +343,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T06:38:42.443428Z",
-     "start_time": "2024-09-30T06:38:42.416771Z"
+     "end_time": "2024-09-30T06:41:30.654100Z",
+     "start_time": "2024-09-30T06:41:30.631252Z"
     }
    },
    "cell_type": "code",
@@ -387,55 +387,55 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x13c005910>"
+       "<pandas.io.formats.style.Styler at 0x13c8d4310>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_6a97e\">\n",
+       "<table id=\"T_54a0a\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_6a97e_level0_col0\" class=\"col_heading level0 col0\" >grade</th>\n",
-       "      <th id=\"T_6a97e_level0_col1\" class=\"col_heading level0 col1\" >total_absences</th>\n",
-       "      <th id=\"T_6a97e_level0_col2\" class=\"col_heading level0 col2\" >average_mark</th>\n",
+       "      <th id=\"T_54a0a_level0_col0\" class=\"col_heading level0 col0\" >grade</th>\n",
+       "      <th id=\"T_54a0a_level0_col1\" class=\"col_heading level0 col1\" >total_absences</th>\n",
+       "      <th id=\"T_54a0a_level0_col2\" class=\"col_heading level0 col2\" >average_mark</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_6a97e_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_6a97e_row0_col0\" class=\"data row0 col0\" >9</td>\n",
-       "      <td id=\"T_6a97e_row0_col1\" class=\"data row0 col1\" >78</td>\n",
-       "      <td id=\"T_6a97e_row0_col2\" class=\"data row0 col2\" >2.42</td>\n",
+       "      <th id=\"T_54a0a_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_54a0a_row0_col0\" class=\"data row0 col0\" >9</td>\n",
+       "      <td id=\"T_54a0a_row0_col1\" class=\"data row0 col1\" >78</td>\n",
+       "      <td id=\"T_54a0a_row0_col2\" class=\"data row0 col2\" >2.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6a97e_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_6a97e_row1_col0\" class=\"data row1 col0\" >10</td>\n",
-       "      <td id=\"T_6a97e_row1_col1\" class=\"data row1 col1\" >94</td>\n",
-       "      <td id=\"T_6a97e_row1_col2\" class=\"data row1 col2\" >2.43</td>\n",
+       "      <th id=\"T_54a0a_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_54a0a_row1_col0\" class=\"data row1 col0\" >10</td>\n",
+       "      <td id=\"T_54a0a_row1_col1\" class=\"data row1 col1\" >94</td>\n",
+       "      <td id=\"T_54a0a_row1_col2\" class=\"data row1 col2\" >2.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6a97e_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_6a97e_row2_col0\" class=\"data row2 col0\" >11</td>\n",
-       "      <td id=\"T_6a97e_row2_col1\" class=\"data row2 col1\" >104</td>\n",
-       "      <td id=\"T_6a97e_row2_col2\" class=\"data row2 col2\" >2.47</td>\n",
+       "      <th id=\"T_54a0a_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_54a0a_row2_col0\" class=\"data row2 col0\" >11</td>\n",
+       "      <td id=\"T_54a0a_row2_col1\" class=\"data row2 col1\" >104</td>\n",
+       "      <td id=\"T_54a0a_row2_col2\" class=\"data row2 col2\" >2.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6a97e_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_6a97e_row3_col0\" class=\"data row3 col0\" >12</td>\n",
-       "      <td id=\"T_6a97e_row3_col1\" class=\"data row3 col1\" >100</td>\n",
-       "      <td id=\"T_6a97e_row3_col2\" class=\"data row3 col2\" >2.55</td>\n",
+       "      <th id=\"T_54a0a_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_54a0a_row3_col0\" class=\"data row3 col0\" >12</td>\n",
+       "      <td id=\"T_54a0a_row3_col1\" class=\"data row3 col1\" >100</td>\n",
+       "      <td id=\"T_54a0a_row3_col2\" class=\"data row3 col2\" >2.55</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 28
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -451,8 +451,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T06:38:42.604691Z",
-     "start_time": "2024-09-30T06:38:42.495645Z"
+     "end_time": "2024-09-30T06:41:30.802081Z",
+     "start_time": "2024-09-30T06:41:30.679571Z"
     }
    },
    "cell_type": "code",
@@ -523,7 +523,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 29
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -538,8 +538,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "K-menas klusterointi\n",
-    "Miten eri opiskelijaryhmät eroavat toisistaan poissaolojen ja arvosanojen perusteella?"
+    "### K-menas klusterointi\n",
+    "- Miten eri opiskelijaryhmät eroavat toisistaan poissaolojen ja arvosanojen perusteella?"
    ],
    "metadata": {
     "collapsed": false
@@ -592,8 +592,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-30T06:38:43.163925Z",
-     "start_time": "2024-09-30T06:38:42.625709Z"
+     "end_time": "2024-09-30T06:41:31.525754Z",
+     "start_time": "2024-09-30T06:41:30.818287Z"
     }
    },
    "id": "a8a78d5893bfaf3f",
@@ -619,31 +619,31 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 42
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Klusteri 0:\n",
+    "#### Klusteri 0:\n",
     "\n",
-    "Poissaolojen keskiarvo: 121,68\n",
+    "- Poissaolojen keskiarvo: 121,68\n",
     "Arvosanan keskiarvo: 2,24 (välillä \"C\" ja \"B\")\n",
     "Tämä klusteri edustaa opiskelijoita, joilla on kohtalainen määrä poissaoloja (~121 päivää) ja keskimääräinen arvosana \"C\"\n",
     "ja \"B\" välillä. Näillä opiskelijoilla on kohtalainen määrä poissaoloja, mutta he suoriutuvat silti keskimääräisesti. Tämä viittaa siihen, että poissaoloilla ei ole niin suurta vaikutusta heidän suoritukseensa, sillä he saavat silti \"C\"\n",
     "ja \"B\" välisiä arvosanoja.\n",
     "\n",
     "\n",
-    "Klusteri 1:\n",
+    "#### Klusteri 1:\n",
     "\n",
-    "Poissaolojen keskiarvo: 243,79\n",
+    "- Poissaolojen keskiarvo: 243,79\n",
     "Arvosanan keskiarvo: 1,59 (välillä \"D\" ja \"C\")\n",
     "Tämä klusteri edustaa opiskelijoita, joilla on erittäin paljon poissaoloja (~244 päivää) ja heikko suoritus (arvosanat väliltä \"D\" ja \"C\"). Näillä opiskelijoilla on todennäköisesti vaikeuksia koulussa, mikä saattaa liittyä heidän suureen poissaolomääräänsä.\n",
     "Tällä ryhmällä on merkittävästi poissaoloja, ja heidän suorituksensa on sen mukaista, arvosanojen ollessa \"D\"\n",
     "ja \"C\" välillä. Tämä viittaa vahvaan negatiiviseen yhteyteen poissaolojen ja heikompien suoritusten välillä.\n",
     "\n",
-    "Klusteri 2:\n",
+    "#### Klusteri 2:\n",
     "\n",
-    "Poissaolojen keskiarvo: 46,23\n",
+    "- Poissaolojen keskiarvo: 46,23\n",
     "Arvosanan keskiarvo: 2,72 (välillä \"B\" ja \"A\")\n",
     "Tämä klusteri edustaa opiskelijoita, joilla on vähän poissaoloja (~46 päivää) ja keskimääräistä paremmat arvosanat (välillä \"B\" ja \"A\"). Nämä ovat hyvin menestyviä opiskelijoita, joilla on suhteellisen vähän poissaoloja. Vähäisten poissaolojen ja korkeiden arvosanojen yhdistelmä viittaa positiiviseen yhteyteen läsnäolon ja hyvän suorituksen välillä."
    ],
@@ -655,9 +655,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Jokainen piste kuvaa oppilasta ja pisteen sijainti perustuu oppilaan poissaolojen kokonaismäärään (X-akseli) ja keskimääräiseen arvosanaan (Y-akseli).\n",
-    "X-akseli = Mitä kauempana piste on oikealla, sitä enemmän oppilaalla on poissaoloja.\n",
-    "Y-akseli = Mitä korkeammalla piste on Y-akselilla, sitä parempi oppilaan keskimääräinen arvosana on."
+    "##### Jokainen piste kuvaa oppilasta ja pisteen sijainti perustuu oppilaan poissaolojen kokonaismäärään (X-akseli) ja keskimääräiseen arvosanaan (Y-akseli).\n",
+    "- X-akseli = Mitä kauempana piste on oikealla, sitä enemmän oppilaalla on poissaoloja.\n",
+    "- Y-akseli = Mitä korkeammalla piste on Y-akselilla, sitä parempi oppilaan keskimääräinen arvosana on."
    ],
    "metadata": {
     "collapsed": false
@@ -667,9 +667,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Klusteri 0 (oppilaat, joilla on kohtalaisesti poissaoloja ja keskiverrot arvosanat) sijaitsee tyypillisesti molempien akseleiden keskialueella.\n",
-    "Klusteri 1 (oppilaat, joilla on paljon poissaoloja ja heikot arvosanat) sijaitsee X-akselilla oikealla (paljon poissaoloja) ja Y-akselilla alempana (heikot arvosanat).\n",
-    "Klusteri 2 (oppilaat, joilla on vähän poissaoloja ja hyvät arvosanat) sijaitsee vasemmalla X-akselilla (vähän poissaoloja) ja korkeammalla Y-akselilla (hyvät arvosanat).\n"
+    "##### Klusteri 0 (oppilaat, joilla on kohtalaisesti poissaoloja ja keskiverrot arvosanat) sijaitsee tyypillisesti molempien akseleiden keskialueella.\n",
+    "- Klusteri 1 (oppilaat, joilla on paljon poissaoloja ja heikot arvosanat) sijaitsee X-akselilla oikealla (paljon poissaoloja) ja Y-akselilla alempana (heikot arvosanat).\n",
+    "- Klusteri 2 (oppilaat, joilla on vähän poissaoloja ja hyvät arvosanat) sijaitsee vasemmalla X-akselilla (vähän poissaoloja) ja korkeammalla Y-akselilla (hyvät arvosanat).\n"
    ],
    "metadata": {
     "collapsed": false
