Added 3. Do students in certain grade levels (e.g., 9th, 10th, 11th, or 12th grade) have higher absenteeism or lower grades? Question

--- a/main3.ipynb
+++ b/main3.ipynb
@@ -234,7 +234,7 @@
     "                                   'bellPeriod4_absences', 'bellPeriod5_absences', 'bellPeriod6_absences']].mean()\n",
     "print(\"Average absences per period:\\n\", period_absence_avg)\n",
     "\n",
-    "# Create a binary target variable for poor academic performance (e.g., pass/fail based on grade threshold)\n",
+    "# binary target variable for poor academic performance (e.g., pass/fail based on grade threshold)\n",
     "data_cleaned = data_cleaned.copy()\n",
     "data_cleaned['pass_fail'] = (data_cleaned['average_grade'] >= 2).astype(int)\n",
     "\n",
