--- a/main3.ipynb
+++ b/main3.ipynb
@@ -954,7 +954,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Research Question 3: Average absenteeism and grades per grade level",
+   "source": [
+    "## Research Question 3: Average absenteeism and grades per grade level\n",
+    "\n",
+    "- Tulosten perusteella ylemmillä luokka-asteilla (11 ja 12) oppilaat ovat keskimäärin poissa useammin, mutta heidän arvosanansa ovat hieman parempia verrattuna alempiin luokka-asteisiin. "
+   ],
    "id": "a80387ea67bf8432"
   },
   {
