Added the final main 2.0

--- a/main2.0.ipynb
+++ b/main2.0.ipynb
@@ -1078,7 +1078,7 @@
     "plt.show()\n",
     "\n",
     "# Sekamatrisi numeerisesti\n",
-    "tn, fp, fn, tp = cm.ravel()  # TN, FP, FN, TP\n",
+    "tn, fp, fn, tp = cm.ravel()\n",
     "\n",
     "# Tulostetaan numeeriset tiedot\n",
     "print(\"Sekamatrisi numeerisesti:\")\n",
@@ -1151,17 +1151,13 @@
    "id": "ff9b06154f0c2ccb"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-03T10:06:05.936914Z",
-     "start_time": "2024-10-03T10:06:05.935351Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "3d2e01818257ebbb",
-   "outputs": [],
-   "execution_count": null
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# 6: Käyttöönotto\n",
+    "##### Tässä projektissa on käsitelty useita tutkimuskysymyksiä, joissa käytettiin erilaisia koneoppimismalleja. Käytetyt mallit — Random Forest, Decision Trees ja Lineaarinen Regressio — tarjoavat koulutusorganisaatioille tehokkaita työkaluja opiskelijoiden menestyksen ennustamiseen ja analysoimiseen. Mallit voivat auttaa tunnistamaan kriittisiä tekijöitä, jotka vaikuttavat opiskelijoiden suoriutumiseen, ja näin ollen parantaa oppimisympäristöä ja koulutuksen laatua. On kuitenkin tärkeää varmistaa, että mallit rakennetaan ja käytetään eettisesti, ottaen huomioon opiskelijoiden yksilölliset tarpeet ja oikeudet."
+   ],
+   "id": "3d6cbb42545105be"
   }
  ],
  "metadata": {
